<resources>
    <string name="app_name">Finansia</string>
    <string name="week_days">Weekdays</string>
    <string-array name="drawer_menus">
        <item>Home</item>
        <item>Currency</item>
        <item>Categories</item>
        <item>Accounts</item>
        <item>Purpose</item>
        <item>Auto operations</item>
        <item>Credits</item>
        <item>Debts</item>
        <item>Sms parsing</item>
        <item>Reports</item>
        <item>Themes</item>
        <item>Settings</item>
        <item>Rate app</item>
        <item>Share app</item>
        <item>Feedback</item>
    </string-array>
    <string-array name="drawer_menu_icons">
        <item>ic_home</item>
        <item>ic_currency</item>
        <item>ic_categories</item>
        <item>ic_accounts</item>
        <item>ic_purpose</item>
        <item>ic_auto</item>
        <item>ic_loans</item>
        <item>ic_debt</item>
        <item>ic_sms</item>
        <item>ic_report</item>
        <item>ic_themes</item>
        <item>ic_settings</item>
        <item>ic_rate</item>
        <item>ic_share</item>
        <item>ic_feedback</item>
    </string-array>
    <string-array name="base_currencies">
        <item>Dollars</item>
        <item>Rouble</item>
        <item>Euro</item>
        <item>Hryvnia</item>
        <item> Sterling </item>
        <item> Leo </item>
        <item> Tenge </item>
        <item> The Belarusian ruble </item>
        <item> Armenian Dram </item>
        <item> Shekel </item>
        <item> The yen </item>
        <item> Vaughan </item>
        <item> Moldavian lei </item>
        <item> Lek </item>
        <item> The Algerian Dinar </item>
        <item> Kwanza </item>
        <item> Manat </item>
        <item> Bahraini Dinar </item>
        <item> Such a </item>
        <item> Make </item>
        <item> Real </item>
        <item> Yuan </item>
        <item> Czech Koruna </item>
        <item> Danish Krone </item>
        <item> Egyptian pound </item>
        <item> Cedi </item>
        <item> The forint </item>
        <item> Indian Rupee </item>
        <item> Indonesian rupiah </item>
        <item> The Iranian Rial </item>
        <item> Iraqi Dinar </item>
        <item> The Jordanian Dinar </item>
        <item> The Kuwaiti Dinar </item>
        <item> Philippine Peso </item>
        <item> Zloty </item>
        <item> The Qatari Riyal </item>
        <item> Sum </item>
        <item> The Saudi riyal </item>
        <item> The Swiss franc </item>
        <item> The Serbian Dinar </item>
        <item> Bath </item>
        <item> Lear </item>
    </string-array>
    <string-array name="base_abbrs">
        <item>$</item>
        <item>₽</item>
        <item>€</item>
        <item>₴</item>
        <item>£</item>
        <item>лв</item>
        <item>₸</item>
        <item>BYN</item>
        <item>РА</item>
        <item>₪</item>
        <item>¥</item>
        <item>₩</item>
        <item>؋</item>
        <item>L</item>
        <item>.د.ج </item>
        <item>Kz</item>
        <item>АР</item>
        <item>.د.ب </item>
        <item>৳</item>
        <item>KM</item>
        <item>R$</item>
        <item>¥</item>
        <item>Kč</item>
        <item>kr</item>
        <item>.ج.م</item>
        <item>﷼₵</item>
        <item>Ft</item>
        <item>₹</item>
        <item>Rp</item>
        <item>﷼</item>
        <item>.د.ع</item>
        <item>.د.إ</item>
        <item>.د.ك</item>
        <item>₱</item>
        <item>zł</item>
        <item>﷼</item>
        <item>uzs</item>
        <item>﷼</item>
        <item>₣</item>
        <item>din</item>
        <item>฿</item>
        <item>₺</item>
    </string-array>
    <string-array name="currency_ids">
        <item>currency_1</item>
        <item>currency_2</item>
        <item>currency_3</item>
        <item>currency_4</item>
        <item>currency_5</item>
        <item>currency_6</item>
        <item>currency_7</item>
        <item>currency_8</item>
        <item>currency_9</item>
        <item>currency_10</item>
        <item>currency_11</item>
        <item>currency_12</item>
        <item>currency_13</item>
        <item>currency_14</item>
        <item>currency_15</item>
        <item>currency_16</item>
        <item>currency_17</item>
        <item>currency_18</item>
        <item>currency_19</item>
        <item>currency_20</item>
        <item>currency_21</item>
        <item>currency_22</item>
        <item>currency_23</item>
        <item>currency_24</item>
        <item>currency_25</item>
        <item>currency_26</item>
        <item>currency_27</item>
        <item>currency_28</item>
        <item>currency_29</item>
        <item>currency_30</item>
        <item>currency_31</item>
        <item>currency_32</item>
        <item>currency_33</item>
        <item>currency_34</item>
        <item>currency_35</item>
        <item>currency_36</item>
        <item>currency_37</item>
        <item>currency_38</item>
        <item>currency_39</item>
        <item>currency_40</item>
        <item>currency_41</item>
        <item>currency_42</item>
    </string-array>
    <string-array name="currency_costs">
        <item>1.0</item>
        <item>0.0154</item>
        <item>0.9</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
    </string-array>
    <string name="expanse">Expense</string>
    <string name="income">Income</string>
    <string name="report_income_expanse_total_income">Total income:</string>
    <string name="monthly_payment">Monthly Payment</string>
    <string name="overpayment_interest">Overpayment Interest</string>
    <string name="bank_fees">Bank fees</string>
    <string name="total_payed">Total paid: </string>
    <string name="period_payments">Period payments</string>
    <string name="not_completed">Not completed</string>
    <string name="all_periods">All periods</string>
    <string name="january">JAN</string>
    <string name="february">FEB</string>
    <string name="march">MAR</string>
    <string name="april">APR</string>
    <string name="may">MAY</string>
    <string name="june">JUN</string>
    <string name="july">JUL</string>
    <string name="august">AUG</string>
    <string name="september">SEP</string>
    <string name="october">OCT</string>
    <string name="november">NOV</string>
    <string name="december">DEC</string>
    <string name="total_with_interest">Total with interest</string>
</resources>