<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/eighteen_sp"
        android:id="@+id/tvReportMonthlyTop"
        android:gravity="center"
        android:paddingTop="@dimen/five_dp"
        android:paddingBottom="@dimen/five_dp"
        android:textColor="#414141"
        android:text="March, 2017"/>
    <com.jim.pocketaccounter.utils.reportviews.ReportSelectingYearWithMonthsView
        android:layout_width="match_parent"
        android:layout_height="@dimen/hundred_and_ninety_dp"
        android:id="@+id/rsywmvReportByIncomeExpenseMonthly"
        android:layout_below="@+id/tvReportMonthlyTop"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/rsywmvReportByIncomeExpenseMonthly"
        android:id="@+id/llMonthsStripe">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/four_dp"
            android:layout_marginBottom="@dimen/four_dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/january"
                android:id="@+id/tvJanuary"
                android:textSize="@dimen/eight_dp"
                android:textColor="#9c9c9c"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/february"
                android:id="@+id/tvFebruary"
                android:textSize="@dimen/eight_dp"
                android:textColor="#9c9c9c"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/march"
                android:id="@+id/tvMarch"
                android:textSize="@dimen/eight_dp"
                android:textColor="#9c9c9c"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/april"
                android:id="@+id/tvApril"
                android:textSize="@dimen/eight_dp"
                android:textColor="#9c9c9c"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/may"
                android:id="@+id/tvMay"
                android:textSize="@dimen/eight_dp"
                android:textColor="#9c9c9c"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/june"
                android:id="@+id/tvJune"
                android:textSize="@dimen/eight_dp"
                android:textColor="#9c9c9c"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/july"
                android:id="@+id/tvJuly"
                android:textSize="@dimen/eight_dp"
                android:textColor="#9c9c9c"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/august"
                android:id="@+id/tvAugust"
                android:textSize="@dimen/eight_dp"
                android:textColor="#9c9c9c"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/september"
                android:id="@+id/tvSeptember"
                android:textSize="@dimen/eight_dp"
                android:textColor="#9c9c9c"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/october"
                android:id="@+id/tvOctober"
                android:textSize="@dimen/eight_dp"
                android:textColor="#9c9c9c"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/november"
                android:id="@+id/tvNovember"
                android:textSize="@dimen/eight_dp"
                android:textColor="#9c9c9c"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/december"
                android:id="@+id/tvDecember"
                android:textSize="@dimen/eight_dp"
                android:textColor="#9c9c9c"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_dp"
        android:background="#dddddd"
        android:layout_below="@+id/llMonthsStripe"
        android:id="@+id/ivStripe"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivStripe"
        android:id="@+id/llRadioGroupStripe"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llIncomeButton"
            android:layout_weight="1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty_dp"
                android:id="@+id/ivReportIncome"
                android:src="@drawable/report_income_expense_buttons_shadow"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_marginBottom="@dimen/five_dp"
                android:id="@+id/tvReportIncome"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <ImageView
            android:layout_width="@dimen/one_dp"
            android:layout_height="match_parent"
            android:background="#dddddd"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llExpenseButton"
            android:layout_weight="1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty_dp"
                android:id="@+id/ivReportExpense"
                android:src="@drawable/report_income_expense_buttons_shadow"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expanse"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_marginBottom="@dimen/five_dp"
                android:id="@+id/tvReportExpense"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_dp"
        android:background="#dddddd"
        android:layout_below="@+id/llRadioGroupStripe"
        android:id="@+id/ivBottomStripe"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ivBottomStripe"
        android:orientation="vertical">
        <com.jim.pocketaccounter.utils.reportviews.LinearChartWithAverageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/eighty_dp"
            android:id="@+id/lchwavReportMonthly"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/report_income_expanse_total_income"
                    android:layout_weight="1"
                    android:id="@+id/tvReportMonthlyTotal"
                    android:textColor="#414141"
                    android:textSize="@dimen/fourteen_dp"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvReportMonthlyTotalAmount"
                    android:textSize="@dimen/fourteen_dp"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#fbfbfb">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/report_income_expanse_total_income"
                    android:layout_weight="1"
                    android:id="@+id/tvReportMonthlyAverage"
                    android:textColor="#414141"
                    android:textSize="@dimen/fourteen_dp"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvReportMonthlyAverageAmount"
                    android:textSize="@dimen/fourteen_dp"
                    android:textColor="#EE8B2C"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/report_income_expanse_total_income"
                    android:layout_weight="1"
                    android:id="@+id/tvReportMinimum"
                    android:textColor="#414141"
                    android:textSize="@dimen/fourteen_dp"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvReportMonthlyMiniumAmount"
                    android:textSize="@dimen/fourteen_dp"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#fbfbfb">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/report_income_expanse_total_income"
                    android:layout_weight="1"
                    android:id="@+id/tvReportMaximumTotal"
                    android:textColor="#414141"
                    android:textSize="@dimen/fourteen_dp"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvReportMonthlyMaximumAmount"
                    android:textSize="@dimen/fourteen_dp"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>