<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/monthly_payment"
            android:textColor="#8a8a8a"
            android:layout_marginLeft="@dimen/sixteen_dp"
            android:textSize="@dimen/sixteen_dp"
            />
        <TextView
            android:id="@+id/tvMothlyPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="318,00$ - 340,00$"
            android:textSize="@dimen/sixteen_dp"
            android:layout_marginRight="@dimen/sixteen_dp"
            android:textColor="@color/black_for_myagkiy_glavniy"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twelve_dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/overpayment_interest"
            android:textColor="#8a8a8a"
            android:layout_marginLeft="@dimen/sixteen_dp"
            android:textSize="@dimen/sixteen_dp"
            />
        <TextView
            android:id="@+id/tvOverPayemtInterest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10000$"
            android:textSize="@dimen/sixteen_dp"
            android:layout_marginRight="@dimen/sixteen_dp"
            android:textColor="@color/black_for_myagkiy_glavniy"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twelve_dp"
        android:orientation="horizontal">
        <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/bank_fees"
        android:textColor="#8a8a8a"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:textSize="@dimen/sixteen_dp"
        />
    <TextView
        android:id="@+id/tvBankFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="35$"
        android:textSize="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:textColor="@color/black_for_myagkiy_glavniy"/>
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/twelve_dp"
    android:orientation="horizontal">
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/total_with_interest"
        android:textColor="#8a8a8a"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:textSize="@dimen/sixteen_dp"
        />
    <TextView
        android:id="@+id/tvTotalWithInterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10858$"
        android:textSize="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:textColor="@color/credit_yellow"/>
</LinearLayout><LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/twelve_dp"
    android:orientation="horizontal">
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/total_payed"
        android:textColor="#8a8a8a"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:textSize="@dimen/sixteen_dp"
        />
    <TextView
        android:id="@+id/tvTotalPayed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="420$"
        android:textSize="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:textColor="#8cc056"/>
</LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:background="#e7e7e7"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fbfbfb"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/eight_dp"
            android:paddingBottom="@dimen/eight_dp"
            android:paddingLeft="@dimen/sixteen_dp"
            android:paddingRight="@dimen/ten_dp"
            android:textSize="@dimen/sixteen_dp"
            android:textColor="@color/black_for_myagkiy_glavniy"
            android:text="@string/period_payments"
            />
        <TextView
            android:id="@+id/rvPeriodCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/eight_dp"
            android:paddingBottom="@dimen/eight_dp"
            android:paddingRight="@dimen/sixteen_dp"
            android:text="20"
            android:textSize="@dimen/sixteen_dp"
            android:textColor="@color/black_for_myagkiy_glavniy"
             />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#e7e7e7" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eight_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:layout_marginTop="@dimen/eight_dp">
        <CheckBox
            android:id="@+id/chbAllPeriods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/blue_bg_checkbox"
            android:checked="true"
            android:paddingLeft="@dimen/ten_dp"
            android:text="@string/all_periods"
            android:textColor="@color/black_for_myagkiy_glavniy" />
        <CheckBox
            android:id="@+id/chbNotCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fifteen_dp"
            android:button="@drawable/blue_bg_checkbox"
            android:paddingLeft="@dimen/ten_dp"
            android:text="@string/not_completed"
            android:textColor="@color/black_for_myagkiy_glavniy" />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#e7e7e7" />
</LinearLayout>